Using List.of() and Map.of()